Fix SVG/PNG math in dark mode

--- a/resources/base-description.scss
+++ b/resources/base-description.scss
@@ -15,7 +15,7 @@
         height: auto;
     }
 
-    img.tex-full {
+    img.tex-full, img.tex-image, img.inline-math, img.display-math {
         @include vars-img;
     }
 
